--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<title>Caroline Stratton</title>
+<meta name="description" content="academic website">
+
+<!-- ******************************************************************************************
+Set the type and color theme here - the Pro version contains additional themes -->
+<link href="css/hawthorne_type2_color3.css" rel="stylesheet">
+<!--  ************************************************************************************* -->
+
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<script src="js/vendor/modernizr.js"></script>
+
+</head>
+<body>
+
+<div class="top-border"></div>
+
+<div class="row">
+	<div class="small-12 medium-12 large-12 small-centered columns">
+		<header>		
+			<h1><a href="index.html">Caroline Stratton, PhD</a></h1>
+			<!--
+			<div class="logo">
+				<a href="index.html"><img src="img/logo.png" alt="Your Name Here" /></a>
+			</div>
+			-->
+		</header>
+	</div>
+</div>
+
+<div class="row">
+	<div class="small-12 medium-7 large-7 columns">
+		<h2>About Me</h2>
+		<p>
+			I am currently a postdoctoral fellow at the University of Texas at Austin School of Information. I received my PhD at the same institution in 2018. 
+		</p>
+
+		<!--<h3>Sample Subheader</h3>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed lacus id sem pellentesque imperdiet. Morbi magna arcu, aliquam sit amet arcu id, feugiat ultrices felis. Aliquam laoreet rutrum diam, eget mattis odio imperdiet in. Quisque in felis et neque fermentum volutpat.
+		</p>
+		
+		<blockquote>
+			<p>&#8220;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac ante arcu, quis auctor sapien. Morbi magna leo, dapibus a pulvinar et, pharetra scelerisque felis. Mauris massa magna, gravida vitae convallis sagittis, sagittis ac ipsum. Integer arcu justo, vehicula vel accumsan ac, venenatis in massa. Curabitur in dui in urna interdum ullamcorper. Pellentesque ut imperdiet libero.&#8221;
+			<cite>Carrie Brownstein</cite></p>
+		</blockquote>-->
+	</div>
+	<div class="small-12 medium-5 large-5 columns">
+		<p>
+			<img src="img/about-photo.png" alt="Caroline Stratton" />
+		</p>
+		<div class="lined-list">
+			<ul>
+				<li><strong>Email:</strong> <a href="mailto:caroline.stratton@utexas.edu">caroline.stratton@utexas.edu</a></li>
+				<li><strong>CV:</strong> <a href="resume.pdf" target="_blank">resume.pdf</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="small-12 medium-12 large-12 columns">
+		<footer>
+			<ul>
+				<li>&copy; 2019 <a href="index.html">Caroline Stratton</a>. All rights reserved.</li>
+				<li><a href="mailto:caroline.stratton@utexas.edu"><i class="fa fa-envelope-o"></i> caroline.stratton@utexas.edu</a></li>
+				
+				<!-- *****************************************************************************************
+				The "Powered by Type & Grids" link in the footer is required in the Free version
+				typeandgrids.com/pirates -->
+				<li>Powered by <a href="http://www.typeandgrids.com" target="_blank">Type &amp; Grids</a></li>
+				<!--  ************************************************************************************ -->
+				
+			</ul>
+			<!--<div class="social-icons">
+				<a href="http://www.twitter.com/typeandgrids" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+				<a href="http://www.facebook.com/typeandgrids" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+			</div>-->
+		</footer>
+	</div>
+</div>
+
+<script src="js/vendor/jquery.min.js"></script>
+<script src="js/foundation.min.js"></script>
+<script src="js/hawthorne.js"></script>
+
+</body>
+</html>
