--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 	<div class="small-12 medium-7 large-7 columns">
 		<h2>About Me</h2>
 		<p>
-			I am currently a postdoctoral fellow at the University of Texas at Austin School of Information. I received my PhD at the same institution in 2018. 
+			I am currently a postdoctoral fellow at the University of Texas at Austin School of Information. 
 		</p>
 
 		<!--<h3>Sample Subheader</h3>
@@ -57,7 +57,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		<div class="lined-list">
 			<ul>
 				<li><strong>Email:</strong> <a href="mailto:caroline.stratton@utexas.edu">caroline.stratton@utexas.edu</a></li>
-				<li><strong>CV:</strong> <a href="resume.pdf" target="_blank">resume.pdf</a></li>
+				<li><strong>CV:</strong> <a href="resume.pdf" target="_blank">Stratton_CV.pdf</a></li>
 			</ul>
 		</div>
 	</div>
