--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ Set the type and color theme here - the Pro version contains additional themes -
 	</div>
 	<div class="small-12 medium-5 large-5 columns">
 		<p>
-			<img src="img/about-photo.png" alt="Caroline Stratton" />
+			<img src="img/headshot.jpg" alt="Caroline Stratton" />
 		</p>
 		<div class="lined-list">
 			<ul>
 				<li><strong>Email:</strong> <a href="mailto:caroline.stratton@utexas.edu">caroline.stratton@utexas.edu</a></li>
-				<li><strong>CV:</strong> <a href="resume.pdf" target="_blank">Stratton_CV.pdf</a></li>
+				<li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Current CV</a></li>
 			</ul>
 		</div>
 	</div>
