--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		<div class="lined-list">
 			<ul>
 				<li><strong>Email:</strong> <a href="mailto:caroline.stratton@utexas.edu">caroline.stratton@utexas.edu</a></li>
-				<li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Current CV</a></li>
+				<li><strong>CV:</strong> <a href="Stratton_CV5.pdf" target="_blank">Current CV</a></li>
 			</ul>
 		</div>
 	</div>
