--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 	<div class="small-12 medium-12 large-12 small-centered columns">
 		<header>		
 			<h1><a href="index.html">Caroline Stratton</a></h1>
-			<h2><a href="index.html">PhD candidate, School of Information, the University of Texas at Austin</a></h2>
+			<h2><a href="index.html">postdoctoral fellow, School of Information, the University of Texas at Austin</a></h2>
 			<!--
 			<div class="logo">
 				<a href="index.html"><img src="img/logo.png" alt="Your Name Here" /></a>
@@ -45,24 +45,9 @@ Set the type and color theme here - the Pro version contains additional themes -
 <div class="row">
 	<div class="small-12 medium-7 large-7 columns">
 		<h2>About Me</h2>
-		<p>
-		I am currently completing my doctoral work at the <a href="http://www.ischool.utexas.edu">University of Texas School of Information</a>. My work falls in the multidisciplinary field known as information and communications technology for development (ICT4D). In my research, I examine how ICT4D interventions, teaching people to use ICT  in the name of development, relate or do not relate to outcomes of development. I talk to people involved in ICT4D to understand their perceptions and beliefs about what the use of ICT does or should do and what development means in the context of distinct interventions. </p>
-		<p>I have a specific interest in situating our understanding of ICT4D in theories about international development. The cumulative history of development theory and practice has identified multiple roles for technologies in the development of countries: a catalyst of the economy, modernizer of industry, enabler of scientific autonomy. Questions about what makes ICT different from technologies favored in previous decades interest me. I'm a nuclear engineer by training and I see intriguing parallels among the prestigious technologies highlighted in international development efforts throughout the history of technical assistance and development intervention. </p>
-		<p>I have used ethnographic methods and qualitative research techniques in my fieldwork in Latin America, drawing on Spanish language skills that date back to my time as a high school exchange student in Alajuela, Costa Rica. With the generous support of NSF grant IIS-1412924, I spent three months in Colombia and three months in Bolivia during 2015, after setting up five field sites across South America for a multi-year collaboration with Drs. <a href="http://www.dianebailey.me">Diane Bailey</a> (my advisor), Paul Leonardi, and Carlos Rodríguez-Lluesma. The primary product of my 2015 fieldwork will be my dissertation, expected for defense in April 2017.</p>
-
-		<h3>Upcoming Work and Travel</h3>
-		<blockquote>
-		  <p><strong>June 2016 - Consortium for the Science of Sociotechnical Systems Summer Institute</strong></p>
-		<p>Stevenson, WA, PhD student participant </p></blockquote>
-		<blockquote>
-		  <p><strong>August 2016 - Doctoral Consortium, Organizational Communication &amp; Information Systems divison, Academy of Management	Annual Meeting   </strong></p>
-		<p>Anaheim, CA, participant</p></blockquote>
-		<blockquote>
-		  <p><strong>August - September 2016 - Society for Social Studies of Science Annual Meeting</strong></p>
-		<p>Barcelona, Spain, presenter</p></blockquote>
-		<blockquote>
-		  <p><strong>October 2016 - Association for Information Science and Technology Annual Meeting</strong></p>
-		<p>Copenhagen, Denmark, refereed paper presenter</p></blockquote>
+		<p>My research poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems. I have experience in team ethnography methods, comparative studies, and international fieldwork.
+		<p>I received a PhD in Information Studies from the University of Texas at Austin in May 2018. As a doctoral student, I studied the use of information and communications technologies (ICTs) in the developing world, focusing on the organization and management of ICT for development (ICT4D) efforts. My dissertation drew on six months of intensive fieldwork that I conducted in Bolivia and Colombia regarding ICT4D and the organizations that engage in this work.
+		<p>After receipt of the PhD, I spent one year as a practitioner managing technology interventions in a non-profit organization. This experience informs my research and led me to a new project about the provision of broadband infrastructure in cities.
 	</div>
 	<div class="small-12 medium-5 large-5 columns">
 		<p>
