--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@ Set the type and color theme here - the Pro version contains additional themes -
 <div class="row">
 	<div class="small-12 medium-12 large-12 small-centered columns">
 		<header>		
-			<h1><a href="index.html">Caroline Stratton</a></h1>
-			<h2><a href="index.html">postdoctoral fellow, School of Information, the University of Texas at Austin</a></h2>
+			<h1><!--a href="index.html"-->Caroline Stratton<!--/a--></h1>
+			<h2><!--a href="index.html"-->postdoctoral fellow, School of Information, the University of Texas at Austin<!--/a--></h2>
 			<!--
 			<div class="logo">
 				<a href="index.html"><img src="img/logo.png" alt="Your Name Here" /></a>
@@ -32,26 +32,26 @@ Set the type and color theme here - the Pro version contains additional themes -
 			-->
 		</header>
 	</div>
-	<div class="small-12 medium-12 large-12 small-centered columns">
+	<!--<div class="small-12 medium-12 large-12 small-centered columns">
 		<nav>
 			<ul class="inline-list-custom">
 				<li><a href="index.html">Research</a></li>
 				<li><a href="about.html" class="current">About Me</a></li>							
 			</ul>
 		</nav>
-	</div>
+	</div>-->
 </div>
 
 <div class="row">
 	<div class="small-12 medium-7 large-7 columns">
 		<h2>About Me</h2>
 		<p>My research poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems. I have experience in team ethnography methods, comparative studies, and international fieldwork.
-		<p>I received a PhD in Information Studies from the University of Texas at Austin in May 2018. As a doctoral student, I studied the use of information and communications technologies (ICTs) in the developing world, focusing on the organization and management of ICT for development (ICT4D) efforts. My dissertation drew on six months of intensive fieldwork that I conducted in Bolivia and Colombia regarding ICT4D and the organizations that engage in this work.
-		<p>After receipt of the PhD, I spent one year as a practitioner managing technology interventions in a non-profit organization. This experience informs my research and led me to a new project about the provision of broadband infrastructure in cities.
+		<p>I received a PhD in Information Studies from the University of Texas at Austin in May 2018. As a doctoral student, I studied the use of information and communications technologies (ICTs) in the developing world, focusing on the organization and management of ICT for development (ICT4D) efforts in Latin America. My dissertation drew on six months of intensive fieldwork that I conducted in Bolivia and Colombia regarding ICT4D and the organizations that engage in this work.
+		<p>After receipt of the PhD, I spent one year as a practitioner managing technology interventions in a non-profit organization. I returned to the academy in May 2019 as a postdoctoral fellow in the School of Information at the University of Texas at Austin, where my non-profit work prompted me to develop a new line of research about the provision of broadband infrastructure in cities. 
 	</div>
 	<div class="small-12 medium-5 large-5 columns">
 		<p>
-			<img src="Sudo Austin-2292.jpg" alt="Your Name" />
+			<img src="Sudo Austin-2292.jpg" alt="Caroline Stratton headshot" />
 		</p>
 		<div class="lined-list">
 		  <ul>
