--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>Caroline Stratton — About Me</title>
-<meta name="description" content="Page description goes here">
+<title>Caroline Stratton</title>
+<meta name="description" content="academic webpage">
 
 <!-- ******************************************************************************************
 Set the type and color theme here - the Pro version contains additional themes -->
