--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>Caroline Stratton</title>
-<meta name="description" content="academic webpage">
+<meta name="description" content="My research poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems. I have experience in team ethnography methods, comparative studies, and international fieldwork.">
 
 <!-- ******************************************************************************************
 Set the type and color theme here - the Pro version contains additional themes -->
