--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>Caroline Stratton</title>
-<meta name="description" content="My research poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems. I have experience in team ethnography methods, comparative studies, and international fieldwork.">
+<meta name="description" content="Caroline is a postdoctoral fellow at the University of Texas at Austin. She is a social scientist with an engineering background who studies how to organize technology interventions for social good.">
 
 <!-- ******************************************************************************************
 Set the type and color theme here - the Pro version contains additional themes -->
@@ -57,6 +57,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		  <ul>
 			  <li><strong>Email:</strong> <a href="mailto:caroline.stratton@utexas.edu">caroline.stratton [at] utexas.edu</a></li>
 			  <li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Stratton_CV.pdf</a></li>
+			  <li><strong>GoogleScholar:</strong> <a href="https://scholar.google.com/citations?user=QCpYzaQAAAAJ&hl=en&oi=ao" target="_blank">Caroline Stratton</a></li>
 			</ul>
 		</div>
 	</div>
