--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ Set the type and color theme here - the Pro version contains additional themes -
 	<div class="small-12 medium-12 large-12 columns">
 		<footer>
 			<ul>
-				<li>&copy; 2019 <a href="index.html">Caroline Stratton</a>. All rights reserved.</li>
-				<li> caroline.stratton [at] utexas.edu</li>
+				<li>&copy; 2020 <a href="index.html">Caroline Stratton</a>. All rights reserved.</li>
+				<li> caroline.stratton [at] gmail.com</li>
 				
 				<!-- *****************************************************************************************
 				The "Powered by Type & Grids" link in the footer is required in the Free version
