--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>Caroline Stratton</title>
-<meta name="description" content="Caroline is a postdoctoral fellow at the University of Texas at Austin. She is a social scientist with an engineering background who studies how to organize technology interventions for social good.">
+<meta name="description" content="Caroline is an assistant professor at Florida State University. She is a social scientist with an engineering background who studies how to organize technology interventions for social good.">
 
 <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
@@ -41,7 +41,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 	<div class="small-12 medium-12 large-12 small-centered columns">
 		<header>		
 			<h1><!--a href="index.html"-->Caroline Stratton<!--/a--></h1>
-			<h2><!--a href="index.html"--postdoctoral fellow, School of Information, the University of Texas at Austin!--/a--></h2>
+			<h2><!--a href="index.html"-->assistant professor, School of Information, Florida State University<!--/a--></h2>
 			<!--
 			<div class="logo">
 				<a href="index.html"><img src="img/logo.png" alt="Your Name Here" /></a>
@@ -61,8 +61,6 @@ Set the type and color theme here - the Pro version contains additional themes -
 
 <div class="row">
 	<div class="small-12 medium-7 large-7 columns">
-		<h2>News!</h2>
-		<p>I am thrilled to be joining the faculty of the iSchool at Florida State University in August 2020. Just to keep things exciting this summer, I'm working with Dr. Matt Beane on an MIT-UC Santa Barbara study about the social impact of automation.
 		<h2>About Me</h2>
 		<p>My research poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems. I have experience in team ethnography methods, comparative studies, and international fieldwork.
 		<p>I received a PhD in Information Studies from the University of Texas at Austin in May 2018. As a doctoral student, I studied the use of information and communications technologies (ICTs) in the developing world, focusing on the organization and management of ICT for development (ICT4D) efforts in Latin America. My dissertation drew on six months of intensive fieldwork that I conducted in Bolivia and Colombia regarding ICT4D and the organizations that engage in this work.
@@ -70,11 +68,11 @@ Set the type and color theme here - the Pro version contains additional themes -
 	</div>
 	<div class="small-12 medium-5 large-5 columns">
 		<p>
-			<img src="Sudo Austin-2292.jpg" alt="Caroline Stratton headshot" />
+			<img src="IMG_2688.jpg" alt="Caroline Stratton headshot" />
 		</p>
 		<div class="lined-list">
 		  <ul>
-			  <li><strong>Email:</strong> <a href="mailto:caroline.stratton@gmail.com">caroline.stratton [at] gmail.com</a></li>
+			  <li><strong>Email:</strong> <a href="mailto:cstratton2@fsu.edu">cstratton2 [at] fsu.edu</a></li>
 			  <li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Stratton_CV.pdf</a></li>
 			  <li><strong>GoogleScholar:</strong> <a href="https://scholar.google.com/citations?user=QCpYzaQAAAAJ&hl=en&oi=ao" target="_blank">Caroline Stratton</a></li>
 			</ul>
@@ -87,7 +85,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		<footer>
 			<ul>
 				<li>&copy; 2020 <a href="index.html">Caroline Stratton</a>. All rights reserved.</li>
-				<li> caroline.stratton [at] gmail.com</li>
+				<li> cstratton2 [at] fsu.edu</li>
 				
 				<!-- *****************************************************************************************
 				The "Powered by Type & Grids" link in the footer is required in the Free version
