--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		<div class="lined-list">
 		  <ul>
 			  <li><strong>Email:</strong> <a href="mailto:cstratton2@fsu.edu">cstratton2 [at] fsu.edu</a></li>
-			  <li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Stratton_CV.pdf</a></li>
+			  <!--<li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Stratton_CV.pdf</a></li>-->
 			  <li><strong>GoogleScholar:</strong> <a href="https://scholar.google.com/citations?user=QCpYzaQAAAAJ&hl=en&oi=ao" target="_blank">Caroline Stratton</a></li>
 			</ul>
 		</div>
