--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@ Set the type and color theme here - the Pro version contains additional themes -
 	<div class="small-12 medium-12 large-12 columns">
 		<footer>
 			<ul>
-				<li>&copy; 2020 <a href="index.html">Caroline Stratton</a>. All rights reserved.</li>
+				<li>&copy; 2021 <a href="index.html">Caroline Stratton</a>. All rights reserved.</li>
 				<li> cstratton2 [at] fsu.edu</li>
 				
 				<!-- *****************************************************************************************
 				The "Powered by Type & Grids" link in the footer is required in the Free version
 				typeandgrids.com/pirates -->
-				<li>Powered by <a href="http://www.typeandgrids.com" target="_blank">Type &amp; Grids</a></li>
+				<li>Template by Type & Grids<!--a href="http://www.typeandgrids.com" target="_blank">Type &amp; Grids</a></li>
 				<!--  ************************************************************************************ -->
 				
 			</ul>
