--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 	<div class="small-12 medium-12 large-12 small-centered columns">
 		<header>		
 			<h1><!--a href="index.html"-->Caroline Stratton<!--/a--></h1>
-			<h2><!--a href="index.html"-->assistant professor, School of Information, Florida State University<!--/a--></h2>
+			<h2><!--a href="index.html"-->applied social scientist<!--/a--></h2>
 			<!--
 			<div class="logo">
 				<a href="index.html"><img src="img/logo.png" alt="Your Name Here" /></a>
@@ -62,9 +62,9 @@ Set the type and color theme here - the Pro version contains additional themes -
 <div class="row">
 	<div class="small-12 medium-7 large-7 columns">
 		<h2>About Me</h2>
-		<p>My research poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems. I have experience in team ethnography methods, comparative studies, and international fieldwork.
-		<p>I received a PhD in Information Studies from the University of Texas at Austin in May 2018. As a doctoral student, I studied the use of information and communications technologies (ICTs) in the developing world, focusing on the organization and management of ICT for development (ICT4D) efforts in Latin America. My dissertation drew on six months of intensive fieldwork that I conducted in Bolivia and Colombia regarding ICT4D and the organizations that engage in this work.
-		<p>After receipt of the PhD, I spent one year as a practitioner managing technology interventions in a non-profit organization. I returned to the academy in May 2019 as a postdoctoral fellow in the School of Information at the University of Texas at Austin, where my non-profit work prompted me to develop a new line of research about broadband infrastructure and digital equity policy in cities. 
+		<p>At the end of 2023, I transitioned from a TT assistant professor role at the School of Information at Florida State University to a new role as Senior Research & Data Manager at the National Digital Inclusion Alliance.</p>
+		<p>My work poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems.
+		<p>I'm currently focused on creating lightweight research tools that digital inclusion practitioners can use to plan and assess their work. My publication record includes studies about broadband and digital equity, open records and information technology, and information and communication for development (ICT4D).</p>
 	</div>
 	<div class="small-12 medium-5 large-5 columns">
 		<p>
@@ -72,7 +72,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		</p>
 		<div class="lined-list">
 		  <ul>
-			  <li><strong>Email:</strong> <a href="mailto:cstratton2@fsu.edu">cstratton2 [at] fsu.edu</a></li>
+			  <li><strong>Email:</strong> <a href="mailto:caroline.stratton@gmail.com">caroline.stratton [at] gmail.com</a></li>
 			  <!--<li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Stratton_CV.pdf</a></li>-->
 			  <li><strong>GoogleScholar:</strong> <a href="https://scholar.google.com/citations?user=QCpYzaQAAAAJ&hl=en&oi=ao" target="_blank">Caroline Stratton</a></li>
 			</ul>
@@ -85,7 +85,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		<footer>
 			<ul>
 				<li>&copy; 2021 <a href="index.html">Caroline Stratton</a>. All rights reserved.</li>
-				<li> cstratton2 [at] fsu.edu</li>
+				
 				
 				<!-- *****************************************************************************************
 				The "Powered by Type & Grids" link in the footer is required in the Free version
