--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>Caroline Stratton</title>
-<meta name="description" content="Caroline is an assistant professor at Florida State University. She is a social scientist with an engineering background who studies how to organize technology interventions for social good.">
+<meta name="description" content="Caroline is a social scientist with an engineering background who studies how to organize technology interventions for social good.">
 
 <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
@@ -62,7 +62,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 <div class="row">
 	<div class="small-12 medium-7 large-7 columns">
 		<h2>About Me</h2>
-		<p>At the end of 2023, I transitioned from a TT assistant professor role at the School of Information at Florida State University to a new role as Senior Research & Data Manager at the National Digital Inclusion Alliance.</p>
+		<p>At the end of 2023, I transitioned from an assistant professor role at the School of Information at Florida State University to a new role as Senior Research & Data Manager at the National Digital Inclusion Alliance.</p>
 		<p>My work poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems.
 		<p>I'm currently focused on creating lightweight research tools that digital inclusion practitioners can use to plan and assess their work. My publication record includes studies about broadband and digital equity, open records and information technology, and information and communication for development (ICT4D).</p>
 	</div>
