--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 <div class="row">
 	<div class="small-12 medium-7 large-7 columns">
 		<h2>About Me</h2>
-		<p>At the end of 2023, I transitioned from an assistant professor role at the School of Information at Florida State University to a new role as Senior Research & Data Manager at the National Digital Inclusion Alliance.</p>
+		<p>At the end of 2023, I transitioned from an assistant professor role at the School of Information at Florida State University to a role at the National Digital Inclusion Alliance.</p>
 		<p>My work poses and responds to pressing questions about how organizations may effectively design and implement technology interventions for social good. My analytic approach integrates theory from and contributes to multiple disciplines, including communication studies, organization studies, and information systems.
 		<p>I'm currently focused on creating lightweight research tools that digital inclusion practitioners can use to plan and assess their work. My publication record includes studies about broadband and digital equity, open records and information technology, and information and communication for development (ICT4D).</p>
 	</div>
@@ -72,7 +72,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 		</p>
 		<div class="lined-list">
 		  <ul>
-			  <li><strong>Email:</strong> <a href="mailto:caroline.stratton@gmail.com">caroline.stratton [at] gmail.com</a></li>
+			  <!--li><strong>Email:</strong> <a href="mailto:caroline.stratton@gmail.com">caroline.stratton [at] gmail.com</a></li-->
 			  <!--<li><strong>CV:</strong> <a href="Stratton_CV.pdf" target="_blank">Stratton_CV.pdf</a></li>-->
 			  <li><strong>GoogleScholar:</strong> <a href="https://scholar.google.com/citations?user=QCpYzaQAAAAJ&hl=en&oi=ao" target="_blank">Caroline Stratton</a></li>
 			</ul>
